# ratatui-json-reader

./: Cargo.toml
src/: app.rs  lib.rs  ui.rs
