[package]
name = "ratatui-json-editor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "json-editor"
path = "src/bin/main.rs"

[lib]
name = "json_editor"
path = "src/lib.rs"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
